Add time to next udpate in plugins screen.

--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -6,7 +6,7 @@
 	color: #006505;
 }
 
-.autoupdates_column .plugin-autoupdate-enabled .disable {
+.autoupdates_column .plugin-autoupdate-disable {
 	color: #a00;
 }
 
