--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -2,11 +2,13 @@
 	min-width: 200px;
 }
 
-.autoupdates_column .plugin-autoupdate-enabled {
+.autoupdates_column .plugin-autoupdate-enabled,
+.theme-overlay .theme-autoupdate-enabled a {
 	color: #006505;
 }
 
-.autoupdates_column .plugin-autoupdate-disable {
+.autoupdates_column .plugin-autoupdate-disable,
+.theme-overlay .theme-autoupdate-disabled a {
 	color: #a00;
 }
 
@@ -27,4 +29,8 @@
 	box-shadow: none;
 	font-size: 20px;
 	color: #006505;
+}
+
+.theme-overlay .theme-autoupdate a {
+	text-decoration: none;
 }
