Switch disable link to red on Multisite Themes Screen

--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -8,6 +8,7 @@
 }
 
 .autoupdates_column .plugin-autoupdate-disable,
+.autoupdates_column .theme-autoupdate-disable,
 .theme-overlay .theme-autoupdate-disabled a {
 	color: #a00;
 }
