--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -1,33 +1,5 @@
-@-moz-keyframes autoupdate-spin {
-	from { -moz-transform: rotate(0deg); }
-	to { -moz-transform: rotate(360deg); }
-}
-@-webkit-keyframes autoupdate-spin {
-	from { -webkit-transform: rotate(0deg); }
-	to { -webkit-transform: rotate(360deg); }
-}
-@keyframes autoupdate-spin {
-	from {transform:rotate(0deg);}
-	to {transform:rotate(360deg);}
-}
 .dashicons-update.spin {
-	-webkit-animation-name: autoupdate-spin;
-	-webkit-animation-duration: 1000ms;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-timing-function: linear;
-	-moz-animation-name: autoupdate-spin;
-	-moz-animation-duration: 1000ms;
-	-moz-animation-iteration-count: infinite;
-	-moz-animation-timing-function: linear;
-	-ms-animation-name: autoupdate-spin;
-	-ms-animation-duration: 1000ms;
-	-ms-animation-iteration-count: infinite;
-	-ms-animation-timing-function: linear;
-
-	animation-name: autoupdate-spin;
-	animation-duration: 1000ms;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
+	animation: rotation 2s infinite linear;
 }
 
 #autoupdates_column {
