Simplifies Ajax on both the JS and PHP sides.
Also fixes several other WPCS-related issues.

--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -2,6 +2,10 @@
 	animation: rotation 2s infinite linear;
 }
 
+.auto-updates-error {
+	display: inline-block;
+}
+
 #autoupdates_column {
 	min-width: 200px;
 }
