Use em instead of px for the width of the auto-update column.
Also adds comments of where each rule is be in core.

--- a/css/wp-autoupdates.css
+++ b/css/wp-autoupdates.css
@@ -1,15 +1,19 @@
-.dashicons-update.spin {
-	animation: rotation 2s infinite linear;
+/* in core, this rule will go with similar rules in wp-admin/css/list-tables.css */
+.plugins .column-auto-updates {
+	min-width: 14.2em;
 }
 
-.auto-updates-error {
+/* in core, this rule will go with the above in wp-admin/css/list-tables.css */
+.plugins .column-auto-updates .auto-updates-error {
 	display: inline-block;
 }
 
-.plugins .column-auto-updates {
-	min-width: 200px;
+/* in core, this rule will go with similar rules in wp-admin/css/common.css */
+.plugins .column-auto-updates .dashicons-update.spin {
+	animation: rotation 2s infinite linear;
 }
 
+/* in core, this rule will go with the equivalent for ".theme-overlay .theme-author a" in wp-admin/css/themes.css */
 .theme-overlay .theme-autoupdate a {
 	text-decoration: none;
 }
